zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/struct_depends_on_itself_via_non_initial_field.zig
const A = struct {
    a: u8,
    bytes: [@sizeOf(A)]u8,
};

comptime {
    _ = @as(A, undefined);
}

// error
//
// :3:21: error: type 'tmp.A' depends on itself for size query here
